# flutter-todo

flutter_cad/: .gitignore  ANDROID_PERMISSION_DEBUG_GUIDE.md  DWG_TEST_FILES.md  ENVIRONMENT_SETUP.md  INTEGRATION_STATUS.md  PHOTO_GALLERY_PERMISSION_FIX.md  README.md  TEIGHA_INTEGRATION.md  pubspec.yaml  setup_teigha_sdk.sh  test_teigha_integration.sh
flutter_cad/ODATrial/: ODATrialActivator.exe.config  ODATrialActivator.exe.manifest  config.json
flutter_cad/android/app/: CMakeLists.txt  build.gradle.kts
flutter_cad/android/app/src/main/: AndroidManifest.xml
flutter_cad/android/app/src/main/cpp/: teigha_jni.cpp
flutter_cad/android/app/src/main/kotlin/com/example/flutter_cad/: MainActivity.kt  TeighaChannel.kt
flutter_cad/assets/config/: test_files.json
flutter_cad/assets/dwg/: 电磁铁.dwg  电磁铁座.dwg  销轴.dwg
flutter_cad/assets/test_files/: demo.hsf  test.txt  三维-sldprt.SLDPRT
flutter_cad/assets/web/: index.html
flutter_cad/hoops_visualize/: LICENSE  README.md  pubspec.yaml
flutter_cad/hoops_visualize/lib/: hoops_native_view.dart  hoops_visualize.dart  hoops_visualize_view.dart
flutter_cad/hoops_visualize/macos/: hoops_visualize.podspec
flutter_cad/ios/Runner.xcodeproj/: project.pbxproj
flutter_cad/lib/: main.dart  router.dart
flutter_cad/scripts/: run_dev.sh  run_prod.sh  run_test.sh
flutter_cad/test/: android_permission_test.dart  photo_gallery_permission_test.dart  widget_test.dart
flutter_todolist/: README.md  pubspec.yaml
flutter_todolist/lib/: main.dart
flutter_todolist/linux/: CMakeLists.txt
flutter_todolist/web/: index.html
(+141 files in other folders)
